--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
 </head>
 <body > 
+    
     <!-- Preloader | Comment below code if you don't want preloader-->
+    <!--
     <div id="loader-wrapper">
         <svg viewbox=" 0 0 512 512" id="loader">
             <linearGradient id="loaderLinearColors" x1="0" y1="0" x2="1" y2="1">
@@ -55,7 +57,7 @@
             </g>
             <circle cx="256" cy="256" r="60" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
             <!-- Change the preloader logo here -->
-            <defs>
+           <!-- <defs>
                 <pattern id="loaderImage" height="100%" width="100%" patternContentUnits="objectBoundingBox">
 
                   
