--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <main>
                 <!-- Header: Counter -->
                 <section class="head-area" id="head-area" data-midnight="white">
-                    <div class="bg-dark"></div>
-                    <div class="head-content container-fluid d-flex align-items-center">
+                    <div class="bg-banner"></div>
+                    <div class="head-content container-fluid d-flex align-items-center bg-dark">
                         <div class="container">
                             <div class="banner-wrapper">
                                 <div class="row align-items-center">
