--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <!-- Header: Counter -->
                 <section class="head-area" id="head-area" data-midnight="white">
                     <div class="bg-banner"></div>
-                    <div class="head-content container-fluid d-flex align-items-center bg-dark">
+                    <div class="bg-dark container-fluid d-flex align-items-center">
                         <div class="container">
                             <div class="banner-wrapper">
                                 <div class="row align-items-center">
