--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
                 </section>
 
 
-                <section id="roadmap" class="roadmap section-padding bg-color">
+                <section id="roadmap" class="roadmap section-padding bg-dark">
                     <div class="container-fluid">
                         <div class="container">
                             <div class="heading text-center">
-                                <h6 class="sub-title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">AutoPool</h6>
-                                <h2 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>How AutoPool Works ? </strong></h2>
+                                <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">AutoPool</h6>
+                                <h2 class="title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>How AutoPool Works ? </strong></h2>
                                 <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                                     <span class="large"></span>
                                     <span class="medium"></span>
                                     <span class="small"></span>
                                 </div>
-                                <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
+                                <p class="content-desc animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                    HAVANA has just one global AutoPool with a One line Autopool structure irrespective to referral line. Every New user is placed under each other and pays to previous user at the AutoPool. Autopool system gives opportunity to earn passive income by global growth of Unstoppable ‘HAVANA’
                                 </p>
                                 
@@ -309,7 +309,7 @@
                 <section id="whitepaper" class="whitepaper section-padding">
                     <div class="container-fluid">
                         <div class="container">
-                            <div class="heading text-center">
+                            <div class="heading text-center text-white">
                                 <h6 class="sub-title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Magic in Numbers</h6>
                                 <h2 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>What,</strong> How and Who Pays ?</h2>
                                 <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
@@ -317,7 +317,7 @@
                                     <span class="medium"></span>
                                     <span class="small"></span>
                                 </div>
-                                <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
+                                <p class="content-desc animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                     HAVANA One Line Global AutoPool is Superfast Way to Multiply ETH. Below Table shows How to Join and multiply your ETH ?
                                 </p>
                             </div>
@@ -387,7 +387,7 @@
         <!-- Exchange Listing Area Ends -->
     </section>
     <!--/ Exchange Listing Area -->
-    <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+    <footer class="static-bottom footer-dark footer-custom-class " data-midnight="white">
         <div class="container">
             <div class="footer-wrapper mx-auto text-center">
 
