--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="container-fluid">
                         <div class="container">
                             <div class="heading text-center">
-                                <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">AutoPool</h6>
+                                <h1 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">AutoPool</h1>
                                 <h2 class="title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>How AutoPool Works ? </strong></h2>
                                 <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                                     <span class="large"></span>
@@ -310,8 +310,8 @@
                     <div class="container-fluid">
                         <div class="container">
                             <div class="heading text-center text-white">
-                                <h6 class="sub-title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Magic in Numbers</h6>
-                                <h2 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>What,</strong> How and Who Pays ?</h2>
+                                <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Magic in Numbers</h6>
+                                <h2 class="title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>What,</strong> How and Who Pays ?</h2>
                                 <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                                     <span class="large"></span>
                                     <span class="medium"></span>
