--- a/1dapp.github.io-master/index.html
+++ b/1dapp.github.io-master/index.html
@@ -333,6 +333,7 @@
                                 <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                     HAVANA is having 1 Global AutoPool.One line Autopool structure is irrespective to referral line. Every New user placed under each other and pays to previous user at AutoPool available at serial Number One.Autopool system gives opportunity to earn passive income by global growth of Unstoppable ‘HAVANA’
                                 </p>
+                                <img src="https://res.cloudinary.com/forceex/image/upload/v1591959837/WhatsApp_Image_2020-06-12_at_12.02.45_PM_dsxbb9.jpg" class="crypto-logo-img img-fluid" alt="CICO">
                             </div>
                             <div class="row animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                                 <div class="col-12">
@@ -383,12 +384,12 @@
                                     <span class="small"></span>
                                 </div>
                                 <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                     HAVANA One Line Global AutoPool is Superfast Way to Multiply ETH.Below Table shows How it works ?
+                                     HAVANA One Line Global AutoPool is Superfast Way to Multiply ETH.Below Table shows How to Join Havana and Multiply your Eth ?
                                 </p>
                             </div>
                             <div class="row">
                                 <div class="col-md-12 col-lg-12 text-center">
-                                    <img src="https://res.cloudinary.com/forceex/image/upload/v1591955072/WhatsApp_Image_2020-06-12_at_10.43.38_AM_eudsad.jpg" class="profit-table w-100">
+                                    <img src="https://res.cloudinary.com/forceex/image/upload/v1591959802/WhatsApp_Image_2020-06-12_at_12.01.31_PM_1_nzkejs.jpg" class="profit-table w-100">
                                 </div>
                                 <!-- <div class="col-md-12 col-lg-5">
                                     <div class="whitepaper-img">
