--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                         <div class="banner-content align-items-center">
                                             <div class="animated" data-animation="fadeInUpShorter" data-animation-delay="2.3s">
                                                 <div class="purchase-token-btn text-center m-b-10">
-                                                    <a href="https://havanav1/havana.github.io/signup" class="btn btn-success">Register</a>
+                                                    <a href="https://https://www.google.com/" class="btn btn-success">Register</a>
                                                     <a href="https://havana.github.io/signin" class="btn btn-success">Log in</a>
                                                 </div>
                                                 <div class="animated text-center" data-animation="fadeInUpShorter" data-animation-delay="1.3s">
