--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAVANA</title>
     
-    <link rel="shortcut icon" type="image/x-icon" href="https://havana.github.io/signup/assets/img/bullrun3.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://bullrun3.github.io/signup/assets/img/bullrun3.png">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700" rel="stylesheet">
     <!--Font icons-->
@@ -100,7 +100,7 @@
                                         <div class="banner-content align-items-center">
                                             <div class="animated" data-animation="fadeInUpShorter" data-animation-delay="2.3s">
                                                 <div class="purchase-token-btn text-center m-b-10">
-                                                    <a href="https://www.google.com/" class="btn btn-success">Register</a>
+                                                    <a href="https://havanav1.github.io/signup" class="btn btn-success">Register</a>
                                                     <a href="https://havana.github.io/signin/index.html" class="btn btn-success">Log in</a>
                                                 </div>
                                                 <div class="animated text-center" data-animation="fadeInUpShorter" data-animation-delay="1.3s">
