--- a/1dapp.github.io-master/index.html
+++ b/1dapp.github.io-master/index.html
@@ -331,7 +331,7 @@
                                     <span class="small"></span>
                                 </div>
                                 <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                    HAVANA is having 1 Global AutoPool.One line Autopool structure is irrespective to referral line. Every New user placed under each other and pays to previous user at AutoPool available at serial Number One.Autopool system gives opportunity to earn passive income by global growth of Unstoppable ‘HAVANA’
+                                    HAVANA is having 1 Super Global AutoPool.One line Autopool structure is irrespective to referral line. Every New user placed under each other and pays to previous user at AutoPool available at serial Number One.Autopool system gives opportunity to earn passive income by global growth of Unstoppable ‘HAVANA’
                                 </p>
                                 <img src="https://res.cloudinary.com/forceex/image/upload/v1591959837/WhatsApp_Image_2020-06-12_at_12.02.45_PM_dsxbb9.jpg" class="crypto-logo-img img-fluid" alt="CICO">
                             </div>
@@ -1349,7 +1349,7 @@
                 <ul class="social-buttons list-unstyled mb-5">
                     <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="https://www.facebook.com/" target="_blank" title="Facebook" class="btn btn-outline-facebook rounded-circle"><i class="ti-facebook"></i></a></li>
                     <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="https://twitter.com" target="_blank" title="Twitter" class="btn btn-outline-twitter rounded-circle"><i class="ti-twitter-alt"></i></a></li>
-                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="https://t.me/BullRunv3" target="_blank" title="Twitter" class="btn btn-outline-twitter rounded-circle"><i class="fa fa-telegram  "></i></a></li>
+                    <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="https://t.me/Havana" target="_blank" title="Twitter" class="btn btn-outline-twitter rounded-circle"><i class="fa fa-telegram  "></i></a></li>
                     <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="https://www.facebook.com" target="_blank" title="Facebook" class="btn btn-outline-facebook rounded-circle"><i class="ti-facebook"></i></a></li>
                     <!--<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="#" title="LinkedIn" class="btn btn-outline-linkedin rounded-circle"><i class="ti-linkedin"></i></a></li>
         <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="#" title="GitHub" class="btn btn-outline-github rounded-circle"><i class="ti-github"></i></a></li>
