--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -241,7 +241,7 @@ $(document).ready(function () {
                                             <span class="badge  badge-info"> 2 X 0.1 </span> = <span class="badge  badge-success"> 0.2 ETH </span>
                                             </td>
                                             <td><span class="pool1_current_address"></span></td>
-                                            <td><a href="https://havana.github.io/poolno1">View in details</a></td>
+                                            <td><a href="https://havanav1.github.io/poolno1">View in details</a></td>
 
 
                                         </tr>
@@ -373,7 +373,7 @@ $(document).ready(function () {
         $('.logoutuser').click(function () {
         
             var account = localStorage.removeItem("address", null);
-            location.href = "https://havana.github.io/signin";
+            location.href = "https://havanav1.github.io/signin";
         });
     });
     </script>
