--- a/signin/index.html
+++ b/signin/index.html
@@ -195,7 +195,7 @@ $(document).ready(function () {
             myContractInstance.methods.users(account).call().then(function (result) {
                 if (result[0]) {
                     localStorage.setItem("address", account);
-                    location.href = "https://havana.github.io/Home-Dashboard";
+                    location.href = "https://havanav1.github.io/Home-Dashboard";
                 }
                 else {
                     $('.error').html('You need to register first');
@@ -224,7 +224,7 @@ $(document).ready(function () {
                 if (result1.status == "0x1") {
                     alert("success")
                     localStorage.setItem("address", account);
-                    location.href = "https://havana.github.io/Home-Dashboard";
+                    location.href = "https://havanav1.github.io/Home-Dashboard";
                 }
                 else {
                     $('.error').html('Transaction Failed');
@@ -294,7 +294,7 @@ $(document).ready(function () {
                     if (receipt.status) {
                         alert("success")
                         localStorage.setItem("address", account);
-                        location.href = "https://havana.github.io/Home-Dashboard";
+                        location.href = "https://havanav1.github.io/Home-Dashboard";
                     }
                     else {
                         $('.error').html('Transaction Failed');
@@ -319,7 +319,7 @@ $(document).ready(function () {
                        
 
                             localStorage.setItem("address", add);
-                            location.href = "https://havana.github.io/Home-Dashboard";
+                            location.href = "https://havanav1.github.io/Home-Dashboard";
                         }
                         else {
                             $('.error').html('You need to register first');
@@ -369,9 +369,9 @@ $(document).ready(function () {
 <body>
 
     <div class="limiter">
-        <div class="container-login100">
+        <div class="container-login100 bg-dark">
             <div class="wrap-login100">
-                <div class="login100-form">
+                <div class="login100-form bg-dark">
                     <form class="w-100 validate-form" onsubmit="return false" id="signinform">
                         <span class="login100-form-title p-b-10 text-white">
                             HAVANA LOGIN
@@ -418,7 +418,7 @@ $(document).ready(function () {
 
 
                 </div> 
-                <div class="login100-more ">
+                <div class="login100-more bg-dark">
                     <div class="col-lg-12 m-t-30">
                                                  <a href="">  <img src="https://res.cloudinary.com/forceex/image/upload/v1591959808/WhatsApp_Image_2020-06-12_at_12.01.31_PM_2_z4rujr.jpg" class="crypto-logo-img img-fluid" alt="CICO"><!--rounded mx-auto d-block pulse2--></a>
                     </div>
