--- a/signup/index.html
+++ b/signup/index.html
@@ -299,7 +299,7 @@ $(document).ready(function () {
 <body>
 
     <div class="limiter">
-        <div class="container-login100">
+        <div class="container-login100 bg-dark">
             <div class="wrap-login100">
                 <div class="login100-form bg-dark">
                  
