--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </head>
 <body > 
     <!-- Preloader | Comment below code if you don't want preloader-->
+    <!--
     <div id="loader-wrapper">
         <svg viewbox=" 0 0 512 512" id="loader">
             <linearGradient id="loaderLinearColors" x1="0" y1="0" x2="1" y2="1">
@@ -55,7 +56,7 @@
             </g>
             <circle cx="256" cy="256" r="60" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
             <!-- Change the preloader logo here -->
-            <defs>
+          <!--  <defs>
                 <pattern id="loaderImage" height="100%" width="100%" patternContentUnits="objectBoundingBox">
 
                   
@@ -79,7 +80,7 @@
                 <!-- Header: Counter -->
                 <section class="head-area" id="head-area" data-midnight="white">
                     <div class="bg-banner"></div>
-                    <div class="head-content container-fluid d-flex align-items-center">
+                    <div class="bg-dark text-white container-fluid d-flex align-items-center">
                         <div class="container">
                             <div class="banner-wrapper">
                                 <div class="row align-items-center">
@@ -125,18 +126,18 @@
                 </section>
 
 
-                <section id="roadmap" class="roadmap section-padding bg-color">
+                <section id="roadmap" class="roadmap section-padding bg-dark">
                     <div class="container-fluid">
                         <div class="container">
                             <div class="heading text-center">
-                                <h6 class="sub-title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">AutoPool</h6>
-                                <h2 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>How AutoPool Works ? </strong></h2>
+                                <h1 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">AutoPool</h1>
+                                <h2 class="title animated" data-animation="fadeInUpShorter text-white" data-animation-delay="0.3s"><strong>How AutoPool Works ? </strong></h2>
                                 <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                                     <span class="large"></span>
                                     <span class="medium"></span>
                                     <span class="small"></span>
                                 </div>
-                                <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
+                                <p class="content-desc animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                     HAVANA have just one Super global Autopool.One line Autopool structure is irrespective to referral line. Every New user placed under each other and pays to previous user at super Autopool.Autopool system gives opportunity to earn passive income by global growth of Unstoppable ‘HAVANA’
                                 </p>
                             </div>
@@ -306,14 +307,14 @@
                     <div class="container-fluid">
                         <div class="container">
                             <div class="heading text-center">
-                                <h6 class="sub-title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Magic in Numbers</h6>
-                                <h2 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>What,</strong> How and Who Pays ?</h2>
+                                <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Magic in Numbers</h6>
+                                <h2 class="title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.3s"><strong>What,</strong> How and Who Pays ?</h2>
                                 <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                                     <span class="large"></span>
                                     <span class="medium"></span>
                                     <span class="small"></span>
                                 </div>
-                                <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
+                                <p class="content-desc animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                     HAVANA Autopool consist of one Super Autopool. Below Image shows how to join?
                                 </p>
                             </div>
@@ -383,7 +384,7 @@
         <!-- Exchange Listing Area Ends -->
     </section>
     <!--/ Exchange Listing Area -->
-    <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+    <footer class="bg-dark static-bottom footer-dark footer-custom-class" data-midnight="white">
         <div class="container">
             <div class="footer-wrapper mx-auto text-center">
 
