--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -92,7 +92,7 @@
                     <div class="container-fluid">
                         <div class="d-flex">
                             <a class="header-brand" href="Home-Dashboard">
-                                <h3 style="margin-top: 16px;color: #141670;">FASTBULL</h3>
+                                <h3 style="margin-top: 16px;color: #141670;">HAVANA</h3>
                                 
                                
                             </a>
@@ -104,7 +104,7 @@
             <!-- Top-header closed -->
             <!-- Sidebar menu-->
             <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
-            <aside class="app-sidebar">
+            <aside class="app-sidebar bg-dark">
                 <div class="side-tab-body p-0 border-0" id="sidemenu-Tab">
                     <div class="first-sidemenu">
                         <div class="line-animations">
@@ -208,7 +208,7 @@ $(document).ready(function () {
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12">
                 <div class="card mb-0">
-                    <div class="card-header">
+                    <div class="card-header bg-dark">
                         <h3 class="card-title">AutoPool</h3>
                         <div class="card-options ">
                             <a href="#" class="card-options-collapse" data-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a>
@@ -216,7 +216,7 @@ $(document).ready(function () {
                             <a href="#" class="card-options-remove" data-toggle="card-remove"><i class="fe fe-x"></i></a>
                         </div>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body bg-dark">
                         <div class="">
                             <div class="table-responsive">
                                 <table class="table card-table table-striped text-nowrap table-bordered">
@@ -284,7 +284,7 @@ $(document).ready(function () {
 
 
  <!-- Footer opened -->
-        <footer class="footer-main leftmenu-footer">
+        <footer class="footer-main leftmenu-footer bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6  mt-2 mb-2 p-l-10">
