--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -641,7 +641,7 @@ $(document).ready(function () {
 
 
 
-<div class="app-content">
+<div class="app-content bg-dark text-white">
     <div class="section">
 
         <!-- Banner opened -->
