--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                                 <p class="content-desc animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                     HAVANA have just one Super global Autopool.One line Autopool structure is irrespective to referral line. Every New user placed under each other and pays to previous user at super Autopool.Autopool system gives opportunity to earn passive income by global growth of Unstoppable ‘HAVANA’
                                 </p>
+                                <img src="https://res.cloudinary.com/forceex/image/upload/v1591959837/WhatsApp_Image_2020-06-12_at_12.02.45_PM_dsxbb9.jpg" class="crypto-logo-img img-fluid" alt="CICO">
                             </div>
                             <div class="row animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                                 <div class="col-12">
