--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                     </div>
                                     <div class="col-lg-12 col-md-12">
                                         <div class="p-1 text-dark text-center">
-                                            <h5 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="2.2s">REAL TEN LINES AUTOPOOL</h5>
-                                            <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="2.2s">Super fast way to make 300+ ETH with global ten lines autopool</h6>
+                                            <h5 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="2.2s">SUPER SINGLE ETHEREUM POOL</h5>
+                                            <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="2.2s">Innovative long lasting global ethereum smart contract, make 3X your investment in no time</h6>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 col-md-12">
