--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -104,7 +104,7 @@
             </div>
             <!-- Top-header closed -->
             <!-- Sidebar menu-->
-            <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
+            <div class="app-sidebar__overlay bg-dark" data-toggle="sidebar"></div>
             <aside class="app-sidebar bg-dark">
                 <div class="side-tab-body p-0 border-0" id="sidemenu-Tab">
                     <div class="first-sidemenu">
@@ -201,8 +201,8 @@ $(document).ready(function () {
        
         
         <!-- App-content opened -->
-<div class="app-content">
-    <div class="section">
+<div class="app-content bg-dark text-white">
+    <div class="section text-white">
 
 
         <!-- row opened -->
@@ -210,16 +210,16 @@ $(document).ready(function () {
             <div class="col-xl-12 col-lg-12 col-md-12">
                 <div class="card mb-0">
                     <div class="card-header bg-dark">
-                        <h3 class="card-title">AutoPool</h3>
+                        <h3 class="card-title text-white">AutoPool</h3>
                         <div class="card-options ">
-                            <a href="#" class="card-options-collapse" data-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a>
-                            <a href="#" class="card-options-fullscreen" data-toggle="card-fullscreen"><i class="fe fe-maximize"></i></a>
-                            <a href="#" class="card-options-remove" data-toggle="card-remove"><i class="fe fe-x"></i></a>
+                            <a href="#" class="card-options-collapse text-white" data-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a>
+                            <a href="#" class="card-options-fullscreen text-white" data-toggle="card-fullscreen"><i class="fe fe-maximize"></i></a>
+                            <a href="#" class="card-options-remove text-white" data-toggle="card-remove"><i class="fe fe-x"></i></a>
                         </div>
                     </div>
-                    <div class="card-body bg-dark">
+                    <div class="card-body bg-dark text-white">
                         <div class="">
-                            <div class="table-responsive">
+                            <div class="table-responsive text-white">
                                 <table class="table card-table table-striped text-nowrap table-bordered">
                                     <thead class="border-top">
                                         <tr>
@@ -236,13 +236,13 @@ $(document).ready(function () {
                                     <tbody>
                                         <tr>
                                             <td><img src="https://bullrun.live/Content/assets/img/1.png" class="w-6" alt=""></td>
-                                            <td><span class="Pool1count"></span></td>
+                                            <td><span class="Pool1count text-white"></span></td>
                                             <td><img src="https://bullrun.live/Content/assets/images/crypto-currencies/square-color/Ethereum.svg" class="w-5" alt=""> 0.1 ETH </td>
                                             <td>
-                                            <span class="badge  badge-info"> 2 X 0.1 </span> = <span class="badge  badge-success"> 0.2 ETH </span>
+                                            <span class="badge  badge-info text-white"> 3 X 0.1 </span> = <span class="badge  badge-success"> 0.6 ETH </span>
                                             </td>
-                                            <td><span class="pool1_current_address"></span></td>
-                                            <td><a href="https://havanav1.github.io/poolno1">View in details</a></td>
+                                            <td><span class="pool1_current_address text-white"></span></td>
+                                            <td><a href="https://havanav1.github.io/poolno1 text-white">View in details</a></td>
 
 
                                         </tr>
@@ -289,7 +289,7 @@ $(document).ready(function () {
             <div class="container">
                 <div class="row">
                     <div class="col-md-6  mt-2 mb-2 p-l-10">
-                        <span class="p-r-10">Contract address</span>
+                        <span class="p-r-10 text-white">Contract address</span>
                         <a href="https://etherscan.io/address/0x885c3177dde25cd01507bf7ca0b00b4b26606143" class="text-success" target="_blank">
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
