--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -79,6 +79,7 @@
 <body class="app">
 
     <!-- Loader -->
+    <!--
     <div id="loading">
         <img src="https://bullrun.live/Content/assets/images/other/loader.svg" class="loader-img" alt="Loader">
     </div>
@@ -97,7 +98,7 @@
                                 
                                
                             </a>
-                            <a href="#" data-toggle="sidebar" class="nav-link icon toggle"><i class="fe fe-align-justify fs-20"></i></a>
+                            <a href="#" data-toggle="sidebar" class="nav-link icon toggle bg-dark"><i class="fe fe-align-justify fs-20"></i></a>
                         </div>
                     </div>
                 </div>
@@ -289,7 +290,7 @@ $(document).ready(function () {
             <div class="container">
                 <div class="row">
                     <div class="col-md-6  mt-2 mb-2 p-l-10">
-                        <span class="p-r-10 text-white">Contract address</span>
+                        <span class="p-r-10 text-white">Contract address: </span>
                         <a href="https://etherscan.io/address/0x885c3177dde25cd01507bf7ca0b00b4b26606143" class="text-success" target="_blank">
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
