--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -221,8 +221,8 @@ $(document).ready(function () {
                     <div class="card-body bg-dark text-white">
                         <div class="">
                             <div class="table-responsive text-white">
-                                <table class="table card-table table-striped text-nowrap table-bordered">
-                                    <thead class="border-top">
+                                <table class="table card-table table-striped text-nowrap table-bordered text-white">
+                                    <thead class="border-top text-white">
                                         <tr>
                                             <th>AutoPool </th>
 
@@ -243,7 +243,7 @@ $(document).ready(function () {
                                             <span class="badge  badge-info text-white"> 3 X 0.1 </span> = <span class="badge  badge-success"> 0.6 ETH </span>
                                             </td>
                                             <td><span class="pool1_current_address text-white"></span></td>
-                                            <td><a href="https://havanav1.github.io/poolno1 text-white">View in details</a></td>
+                                            <td><a href="https://havanav1.github.io/poolno1" class = "text-white">View in details</a></td>
 
 
                                         </tr>
