--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -223,14 +223,14 @@ $(document).ready(function () {
                             <div class="table-responsive text-white">
                                 <table class="table card-table table-striped text-nowrap table-bordered text-white">
                                     <thead class="border-top text-white">
-                                        <tr>
-                                            <th>AutoPool </th>
+                                        <tr class = "text-white">
+                                            <th class = "text-white">AutoPool </th>
 
 
-                                            <th>Total Users</th>
-                                            <th>Entry Fees</th>
-                                            <th>Users X ETH = Profit</th>
-                                            <th>Current User Address</th>
+                                            <th class = "text-white">Total Users</th>
+                                            <th class = "text-white">Entry Fees</th>
+                                            <th class = "text-white">Users X ETH = Profit</th>
+                                            <th class = "text-white">Current User Address</th>
                                             <th></th>
                                         </tr>
                                     </thead>
