--- a/Autopool/index.html
+++ b/Autopool/index.html
@@ -236,11 +236,11 @@ $(document).ready(function () {
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td><img src="https://bullrun.live/Content/assets/img/1.png" class="w-6" alt=""></td>
+                                            <td><img src="https://res.cloudinary.com/forceex/image/upload/v1591973825/logo_one_icon_bmlawv.jpg" class="w-6" alt=""></td>
                                             <td><span class="Pool1count text-white"></span></td>
                                             <td><img src="https://bullrun.live/Content/assets/images/crypto-currencies/square-color/Ethereum.svg" class="w-5" alt=""> 0.1 ETH </td>
                                             <td>
-                                            <span class="badge  badge-info text-white"> 3 X 0.1 </span> = <span class="badge  badge-success"> 0.6 ETH </span>
+                                            <span class="badge  badge-warning text-white"> 3 X 0.1 </span> = <span class="badge  badge-primary"> 0.6 ETH </span>
                                             </td>
                                             <td><span class="pool1_current_address text-white"></span></td>
                                             <td><a href="https://havanav1.github.io/poolno1" class = "text-white">View in details</a></td>
